@@ -3,7 +3,7 @@
  *   LinuxSampler - modular, streaming capable sampler                     *
  *                                                                         *
  *   Copyright (C) 2003, 2004 by Benno Senoner and Christian Schoenebeck   *
- *   Copyright (C) 2005, 2006 Christian Schoenebeck                        *
+ *   Copyright (C) 2005 - 2007 Christian Schoenebeck                       *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -87,6 +87,7 @@ namespace LinuxSampler {
                     virtual optional<int>    RangeMinAsInt(std::map<String,String> Parameters);
                     virtual optional<int>    RangeMaxAsInt(std::map<String,String> Parameters);
                     virtual std::vector<int> PossibilitiesAsInt(std::map<String,String> Parameters);
+                    virtual int              ValueAsInt();
                     virtual void             OnSetValue(int i) throw (Exception);
                     static String Name();
             };
